# fastapi-rag-chatbot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  main.py  pyproject.toml
.github/workflows/: ci.yaml
apps/api/: main.py
apps/worker/: main.py
docker/: api.Dockerfile  compose.dev.yaml  worker.Dockerfile
docs/: architecture.md  prd.md  tasks.md
src/core/domain/policies/: ingest_policy.py
tests/: conftest.py
tests/unit/: test_smoke.py
tests/unit/core/domain/policies/: conftest.py  test_ingest_policy.py
